--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    background: url("../assets/images/bg.avif");
+    background-size: cover;
+    background-repeat: no-repeat;
+    font-family: 'Trebuchet MS', sans-serif;
+    height: 100vh;
+}
